--- a/main.css
+++ b/main.css
@@ -1,4 +1,64 @@
 body {
     margin: 0;
     padding: 0;
+    /* color: white; */
+    font-family: sans-serif;
 }
+
+.main-content {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(
+        to right,
+        #00203FFF 0%,
+        #00203FFF 50%,
+        #ADEFD1FF 50%,
+        #ADEFD1FF 100%);
+}
+
+ .split {
+    height: 100%;
+    width: 50%;
+    position: static;
+    overflow-x: hidden;
+    z-index: 1;
+} 
+ .left {
+    background-color: #234E70;
+    display: flex;
+    max-width: 50%;
+    align-items: center;
+    height: 100vh;
+    color: #ADEFD1FF;
+    
+}
+.right {
+    display: flex;
+    max-width: 50%;
+    align-items: center;
+    height: 100vh;
+    color: #00203FFF;
+} 
+
+.big-avatar {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    object-fit: cover;
+
+}
+
+/* reusable ccs-classes */
+
+.flex {display: flex;}
+.justify-center {justify-content: center; }
+.align-center {align-items: center;}
+.column {flex-direction: column;}
+.space-between {justify-content: space-between;}
+.p0 {padding: 0;}
+.p1 {padding: 1rem;}
+.m0 {margin: 0;}
+.m1 {margin: 1rem;}
+.gap1 {gap: 1rem;}
+.noliststyle {list-style: none;}
+.medium-font {font-size: 13px;}
