--- a/header.css
+++ b/header.css
@@ -1,6 +1,6 @@
 .header {
     padding: 0 7rem 0 7rem;
-    background-color: #2d2e32d0;
+    background-color: #252525ef;
     color: white;
 }
 
@@ -16,5 +16,14 @@
 }
 
 .nav-item {
-    padding: 1.2rem;
+    /* padding: 1.2rem; */
+    height: 1rem;
+    width:3.6rem
+}
+
+.cv-button {
+    border: 2px solid red;
+    border-radius: 10%;
+    background-color: #29292cd0;
+   
 }
