--- a/skills.css
+++ b/skills.css
@@ -1,10 +1,84 @@
 
+
+
 .skills-container {
     height: 100vh;
     width: 100vw;
-    flex-basis: 25%;
+    background-color: var(--main-color);
+    border: 2px solid black;
+    grid-template-columns: 4 1fr;
+    grid-template-areas:
+    "a a a a"
+    "b c d e"
+    "b c d e"
+    "f f f f"
+    "g h i j"
+    "g h i j";
+
 }
 
-.skill-img {
+ 
+.skills-headline {
+    /* background-color: var(--main-color); */
+    color: white;
+    text-decoration: underline 3px;
+    text-underline-offset: 0.3em;
+    text-decoration-color: red;
+    grid-area: a;
+    /* grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 1; */
+    /* height: 4rem; */
     border: 2px solid black;
 }
+
+.learning-headline {
+    color: white;
+    text-decoration: underline 3px;
+    text-underline-offset: 0.3em;
+    text-decoration-color: red;
+    grid-area: f;
+    /* grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 4; */
+    /* height: 4rem; */
+    border: 2px solid black;
+}
+
+.skill-item1 {
+    grid-area:b;
+   
+}
+.skill-item2 {
+    grid-area:c;
+}
+.skill-item3 {
+    grid-area:d;
+   
+}
+.skill-item4 {
+    grid-area:e;
+}
+.skill-item5 {
+    grid-area:g;
+   
+}
+.skill-item6 {
+    grid-area:h;
+}
+.skill-item7 {
+    grid-area:i;
+   
+}
+.skill-item8 {
+    grid-area:j;
+}
+
+.skill-image {
+    height: 15rem;
+    width: 15rem;
+    border: 2px solid black;
+}
+
