--- a/styles/main.css
+++ b/styles/main.css
@@ -3,33 +3,58 @@
     --hover-color: red;
 }
 
+html {
+  height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
     font-family: sans-serif;
-    overflow-x: hidden;
+    position:relative;
+    
 }
 
 .main-content {
     width: 100%;
-    height: 90vh;
+    height: 100%;  
     background: linear-gradient(
         to right,
         #00203FFF 0%,
         #00203FFF 50%,
         #ADEFD1FF 50%,
         #ADEFD1FF 100%);
+        overflow-y: auto;
+}
+
+.my-name::before {
+  font-size: 20px;
+  content: '<';
+  padding-right: 0.5rem;
+  color: red;
+}
+.my-name::after {
+  font-size: 20px;
+  content: '>';
+  padding-left: 0.5rem;
+  color: red;
 }
 
 h1 {
-    font-size: 40px;
+  font-size: clamp(2rem, 2.3vw, 3.5rem);
+}
+
+h3 {
+  
+  font-size: clamp(0.4rem, 2.3vw, 1.5rem);
 }
 
  .split {
     height: 100%;
     width: 50%;
     position: static;
-    overflow-x: hidden;
+  
     z-index: 1;
 } 
  .left {
@@ -37,7 +62,7 @@ h1 {
     display: flex;
     max-width: 50%;
     align-items: center;
-    /* height: 100vh; */
+    /* height: 91vh; */
     color: #ADEFD1FF;
     
 }
@@ -50,18 +75,19 @@ h1 {
 } 
 
 .big-avatar {
-    width: 500px;
-    height: 500px;
+    width: clamp(10rem, 50%, 30rem);
+    height: clamp(10rem, 50%, 30rem);
     border-radius: 50%;
     object-fit: cover;
 }
 
-.menu-link {
-    color: inherit;
+
+ul {
+list-style: none;
 }
 
-.menu-link:hover {
-    color: var(--hover-color);
+a {
+  text-decoration: none;
 }
 
 /* reusable ccs-classes */
@@ -78,6 +104,3 @@ h1 {
 .m0 {margin: 0;}
 .m1 {margin: 1rem;}
 .gap1 {gap: 1rem;}
-.noliststyle {list-style: none;}
-.notextstyle {text-decoration: none;}
-.medium-font {font-size: 13px;}
