--- a/styles/header.css
+++ b/styles/header.css
@@ -13,14 +13,9 @@ header {
     border-radius: 50%;
 }
 
-.nav-bar {
-    /* padding: 0 5rem 0rem 5rem ; */
-}
-
 .nav-item, .cv-button {
     /* padding: 1.2rem; */
-    height: 1rem;
-    width:3.6rem
+    font-size: 1.2rem;
 }
 
 .cv-button {
