--- a/styles/main.css
+++ b/styles/main.css
@@ -50,6 +50,18 @@ h3 {
   font-size: clamp(0.4rem, 2.3vw, 1.5rem);
 }
 
+#changing-word {
+  color: rgb(250, 250, 250);
+}
+
+#changing-word::after {
+  color: red;
+  content: '_';
+  margin-left: 5px;
+  animation: blink 0.7s infinite;
+
+}
+
  .split {
     height: 100%;
     width: 50%;
@@ -86,8 +98,17 @@ ul {
 list-style: none;
 }
 
-a {
+a, a:visited {
+  color: inherit;
   text-decoration: none;
+  
+}
+
+.skill-image {
+
+  width: 20%;
+  padding: 0.5rem;
+
 }
 
 /* reusable ccs-classes */
@@ -104,3 +125,9 @@ a {
 .m0 {margin: 0;}
 .m1 {margin: 1rem;}
 .gap1 {gap: 1rem;}
+
+
+@keyframes blink {
+  0% { opacity: 1; }
+  100% { opacity: 0; }
+}
