--- a/styles/alternate-content.css
+++ b/styles/alternate-content.css
@@ -1,7 +1,4 @@
 
-
-
-
 .skill-image {
 
   width: 20%;
@@ -14,9 +11,7 @@
   background-color: rgb(21, 60, 98);
 }
 
-.project-container {
-  
-}
+
 
 .project-title {
   color: white;
@@ -65,9 +60,11 @@
 }
 @media only screen and (max-width: 405px) {
   .project-image {
-   width: 8rem;
-
-    }
+    width: 8rem;
+   }
+  .project-container {
+    margin-top: 4rem;
+  }
 }
 
 @media only screen and (max-width: 560px) {
