--- a/styles/header.css
+++ b/styles/header.css
@@ -2,9 +2,8 @@ header {
     top: 0;
     background-color: #252525ef;
     color: white;
-    position: fixed;
     width: 100%;
-
+    position: fixed;
 }
 
 .avatar {
@@ -26,7 +25,7 @@ header {
 }
 
 .menu-link {
-  color: inherit;
+  padding: 0.5rem;
 }
 
 .menu-link:hover {
@@ -42,7 +41,6 @@ header {
   width: 100%;
   background-color: #252222ef;
   top: 8rem;
-  /* position: fixed; */
   color: white;
 }
 
@@ -52,22 +50,19 @@ header {
 }
 
 
-@media only screen and (max-width: 774px) {
+@media only screen and (max-width: 776px) {
   .nav-item {
     display: none;
   }
   .my-name {
     display: none;
   }
-  
- 
 }
 
 @media only screen and (min-width: 776px) {
   .burger-menu-button {
     display: none;
   }
-  
 }
 
 
